# FiraCodeChunky

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_nerd.py  build_reference.py  fetch.sh  fetch_nerd_fonts.sh  package_release.py  proof.py
src/fira_code_chunky/: __init__.py  bake.py  cli.py  commands.py  extrapolate.py  features.py  gates.py  metadata.py  patch.py  pipeline.py  qa.py  qa_deep.py  runner.py  variable.py
tests/: conftest.py
tests/fixtures/: build_fixture.py
tests/fixtures/micro/: Micro.designspace
tests/fixtures/micro/MicroBold.ufo/: features.fea  fontinfo.plist  kerning.plist
tests/fixtures/micro/MicroBold.ufo/glyphs/: I_.glif  I_acute.glif  O_.glif  acutecomb.glif
tests/fixtures/micro/MicroLight.ufo/: fontinfo.plist  kerning.plist
tests/fixtures/micro/MicroLight.ufo/glyphs/: I_.glif  I_acute.glif  O_.glif  acutecomb.glif  contents.plist
tests/integration/: test_backtick_shaping.py  test_fidelity.py  test_mark_anchoring.py  test_nerd.py  test_overlay_shaping.py  test_real_build.py  test_upstream.py
tests/unit/: test_bake.py  test_build_nerd.py  test_cli.py  test_commands.py  test_extrapolate.py  test_features.py  test_fixture.py  test_gates.py  test_metadata.py  test_package.py  test_package_release.py  test_patch.py  test_pipeline.py  test_qa.py  test_qa_deep.py  test_runner.py  test_variable.py
